Release 5.2 (support Java9)